<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout
            android:layout_width="382dp"
            android:layout_height="111dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/constraintLayout"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="372dp"
            android:layout_height="446dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/constraintLayout3">
        <ScrollView
                android:layout_width="387dp"
                android:layout_height="488dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/fin_lava"
                                android:layout_width="92dp"
                                android:layout_height="24dp"
                                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="19dp"/>
                        <EditText
                                android:layout_width="202dp"
                                android:layout_height="44dp"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/finArvo" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="4dp" app:layout_constraintStart_toEndOf="@+id/textView14"
                                android:layout_marginLeft="12dp" android:layout_marginStart="12dp"/>
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/fin_lava"
                                android:layout_width="92dp"
                                android:layout_height="24dp"
                                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="19dp"/>
                        <EditText
                                android:layout_width="202dp"
                                android:layout_height="44dp"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/finArvo" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="4dp" app:layout_constraintStart_toEndOf="@+id/textView14"
                                android:layout_marginLeft="12dp" android:layout_marginStart="12dp"/>
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/euro_lava"
                                android:layout_width="101dp"
                                android:layout_height="23dp"
                                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="19dp"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/finArvo" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/textView14"
                                android:layout_marginLeft="1dp" android:layout_marginStart="1dp"/>
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/dol"
                                android:layout_width="101dp"
                                android:layout_height="24dp"
                                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="19dp"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/finArvo" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/textView14"
                                android:layout_marginLeft="1dp" android:layout_marginStart="1dp"/>
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/mrlk"
                                android:layout_width="98dp"
                                android:layout_height="27dp"
                                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="19dp"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/finArvo" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/textView14"
                                android:layout_marginLeft="1dp" android:layout_marginStart="1dp"/>
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/rlk"
                                android:layout_width="98dp"
                                android:layout_height="20dp"
                                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="19dp"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/finArvo" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/textView14"
                                android:layout_marginLeft="1dp" android:layout_marginStart="1dp"/>
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="60dp"
                              android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/kukka"
                                android:layout_width="97dp"
                                android:layout_height="23dp"
                                android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
                                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="19dp"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/finArvo" app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/textView14"
                                android:layout_marginLeft="1dp" android:layout_marginStart="1dp"/>
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <android.support.constraint.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3" app:layout_constraintGuide_begin="16dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="396dp"
            android:layout_height="71dp"
            android:id="@+id/constraintLayout2" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="4dp" android:layout_marginEnd="7dp" android:layout_marginRight="7dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_help"
                android:id="@+id/helpButton"
                android:contentDescription="TODO"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="1.0"/>
        <TextView
                android:text="@string/lvmtulos"
                android:layout_width="129dp"
                android:layout_height="37dp"
                android:id="@+id/textView15"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.05" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.52"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>